Fix Vercel config: use rewrites instead of routes

--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
   "installCommand": "npm install",
   "framework": null,
   "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x"
-    }
+    "api/index.js": {}
   },
   "rewrites": [
     {
