--- a/.vercelignore
+++ b/.vercelignore
@@ -3,7 +3,7 @@
 server/index.js
 server/vite.js
 server/storage.js
-client/src/
+# Note: client/src/ is needed for build, so don't exclude it
 client/js/
 client/about.html
 client/index_confess.html
