Fix Vercel config: use rewrites instead of routes

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "destination": "/api/index.js"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!api|assets|images|favicon\\.png).*)",
       "destination": "/index.html"
     }
   ],
