--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kapish505/SocialWall"
+    "url": "https://github.com/kapish505/0xConfess"
   },
   "engines": {
     "node": ">=18.0.0"
