--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,24 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist/public",
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "/api/index.js"
+        },
+        {
+            "source": "/assets/:path*",
+            "destination": "/assets/:path*"
+        },
+        {
+            "source": "/images/:path*",
+            "destination": "/images/:path*"
+        },
+        {
+            "source": "/favicon.png",
+            "destination": "/favicon.png"
+        },
+        {
+            "source": "/((?!api/|assets/|images/|favicon.png).*)",
+            "destination": "/index.html"
+        }
+    ]
 }
-
